<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B394EA"
    tools:context=".MainActivity"
     tools:ignore="MissingClass">

 <ImageView
     android:id="@+id/women1"
     android:layout_width="410dp"
     android:layout_height="220dp"

     android:src="@drawable/main_page"
     android:layout_marginTop="10dp"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.612"
     android:contentDescription="@string/fab_transformation_scrim_behavior">
 </ImageView>


 <Button
     android:id="@+id/btn_contact"
     android:layout_width="155dp"
     android:layout_height="100dp"
     android:backgroundTint="@color/white"
     android:contentDescription="@string/con"
     android:text="@string/con"
     android:textAlignment="center"
     android:textColor="@color/black"
     android:textSize="20sp"
     android:textStyle="bold"
     app:cornerRadius="15dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.062"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.445"
     tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,TextSizeCheck" />

 <Button
     android:id="@+id/btn_helpline"
     android:layout_width="155dp"
     android:layout_height="100dp"
     android:backgroundTint="@color/white"
     android:contentDescription="@string/helpline"
     android:text="@string/helpline"
     android:textAlignment="center"
     android:textColor="@color/black"
     android:textSize="20sp"
     android:textStyle="bold"
     app:cornerRadius="15dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.859"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.447"
     tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

 <Button
     android:id="@+id/siren"
     android:layout_width="155dp"
     android:layout_height="100dp"
     android:backgroundTint="@color/white"
     android:contentDescription="@string/siren"
     android:text="@string/siren"
     android:textAlignment="center"
     android:textColor="@color/black"
     android:textSize="20sp"
     android:textStyle="bold"
     app:cornerRadius="15dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.946"
     tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />

 <Button
     android:id="@+id/trackMe"
     android:layout_width="155dp"
     android:layout_height="100dp"
     android:backgroundTint="@color/white"
     android:contentDescription="@string/trace_me"
     android:text="@string/track_me"
     android:textAlignment="center"
     android:textColor="#201E1E"
     android:textSize="20sp"
     android:textStyle="bold"
     app:cornerRadius="15dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.062"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.683"
     tools:ignore="TextContrastCheck,SpeakableTextPresentCheck,TextSizeCheck" />

 <Button
     android:id="@+id/defence1"
     android:layout_width="155dp"
     android:layout_height="100dp"
     android:backgroundTint="@color/white"
     android:contentDescription="@string/defence"
     android:text="@string/defence"
     android:textAlignment="center"
     android:textColor="#201E1E"
     android:textSize="20sp"
     android:textStyle="bold"
     app:cornerRadius="15dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.859"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.685"
     tools:ignore="TextContrastCheck,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>
